# buildstr

./: .cruft.json  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/buildstr/: builder.py  builder_test.py  builder_test_augass.py
src/str_builder/: builder_test.py
