[tool]
[tool.poetry]
name = "buildstr"
version = "0.1.1"
homepage = "https://github.com/abilian/buildstr"
description = "Fancy Pythonic String Builder."
authors = ["Abilian SAS <sf@abilian.com>"]
readme = "README.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "buildstr", from = "src" },
]



[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
## Standard cruft
abilian-devtools = "*"

cruft = "*"
toml = "*"
## /standard cruft

pyanalyze = "^0.9.0"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = [
#    'ignore:.*contextfunction.*:DeprecationWarning',
#    'ignore:.*Unmanaged.*:sqlalchemy.exc.SAWarning'
]
addopts = "--tb=short"
testpaths = [
    "tests",
    "src",
]


[tool.pyanalyze]
paths = ["src/"]
import_paths = ["."]

# Additional checks
bare_ignore = true
missing_f = true
use_fstrings = true
value_always_true = true

# TODO: fix issues and activate
#unused_ignore = true
#enforce_no_unused = true
#incompatible_override = true
#missing_parameter_annotation = true
#missing_return_annotation = true
#suggested_parameter_type = true
#suggested_return_type = true
#use_fstrings = true
#value_always_true = true

# TODO: fix issues and remove
attribute_is_never_set = false
duplicate_dict_key = false
import_failed = false
impossible_pattern = false
incompatible_argument = false
incompatible_call = false
incompatible_return_value = false
internal_error = false
missing_return = false
possibly_undefined_name = false
undefined_attribute = false
unused_variable = false


[tool.ruff]
select = [
    "F",
    "E",
    "C90",
    "I",
    "UP",
    "N",
    "YTT",
    "B",
    "A",
    "C4",
    "ICN",
    "Q",
    "S",
    "BLE",
    "RET",
    "SIM",
    "TID",
    "RUF",
    "PLC", "PLE", "PLR", "PLW",
]
# Add later: "ANN", "ERA"...

ignore = [
    "S101",  # Use of `assert` detected
    "B019",  # Use of `functools.cache` on methods can lead to memory leaks
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
    "PLW2901", # `with` statement variable overwritten by assignment target
]


[tool.pyright]
exclude = [
    '.tox',
    '.nox',
    'tests',
    'sandbox',
    'doc',
    'scripts',
    'tmp',
]
include = ["src"]

# pyright has issues with modules imported from a root __init__.py
reportPrivateImportUsage = false

# Temp
reportGeneralTypeIssues = false
reportMissingImports = false
reportOptionalSubscript = false

